--- a/style.css
+++ b/style.css
@@ -30,3 +30,14 @@ h1#left {
     margin-left: 90px;
     margin-bottom: 0px;
 }
+div#right {
+    float: right;
+    width: 40%;
+    bottom: 40px;
+    margin-top: 80px;
+    line-height: 45px;
+}
+img#self {
+    width: 400px;
+    height: 500px;
+}
